# Benchmarking

./: .gitignore  CHANGELOG.md  OPERATIONS.md  README.md  deploy.sh  pyproject.toml
docs/: CLUSTER_OPS_PLAN.md
examples/: iops-rate-steps.yaml  iops-suite.yaml  quickstart.yaml  soak-failover.yaml  tpcc-full.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: Crumbs.tsx  LiveChart.tsx  LogConsole.tsx  Palette.tsx  SeriesTable.tsx  Shell.tsx
frontend/src/lib/: format.ts  sse.ts  theme.ts
frontend/src/pages/: Audit.tsx  ClusterOps.tsx  Compare.tsx  Diagnostics.tsx  History.tsx  InteractiveReport.tsx  JobView.tsx  KubeDiag.tsx  KubeOperate.tsx  KubeParams.tsx  KubeTargetView.tsx  LiveCompare.tsx  NewRun.tsx  OpsCompare.tsx  OpsRunView.tsx  OpsRuns.tsx  ReportView.tsx  RunDetail.tsx  Settings.tsx  Targets.tsx  Tasks.tsx  Users.tsx
packaging/systemd/: pgbench-web.service  pgbench-worker.service
src/pgbench_harness/: __init__.py  __main__.py  capture.py  cli.py  compare.py  detect.py  deviceio.py  deviceprobe.py  errors.py  evidence.py  evidencepack.py  manifest.py  parser.py  pgbench_cmd.py  report.py  report_evidence.py  report_soak.py  runner.py  soak.py  spec.py  summarize.py  sysbench.py  util.py
src/pgbench_harness/ops/: __init__.py  backup.py  cli.py  crconfig.py  discover.py  health.py  kube.py  monitor.py  operate.py  oprun.py  opspec.py  params.py  patroni.py  pmm.py  report_ops.py  scenario.py  stitch.py  validate.py
src/pgbench_harness/templates/: base.css.j2  compare.html.j2  compare_common.html.j2  compare_soak.html.j2  (+4 more)
src/pgbench_webapp/: __init__.py  admin.py  app.py  cli_entry.py  config.py  db.py  harness_api.py  index.py  notify.py  ops_routes.py  ops_support.py  queries.py  secrets_store.py  security.py  util.py  worker.py
tests/: conftest.py  test_e2e.py  test_iops.py  test_longevity.py  test_manifest.py  test_ops.py  test_ops_stitch.py  test_parser.py  test_report_unit.py  test_soak.py  test_spec.py  test_summarize.py  test_sysbench_cmd.py  test_webapp.py
tests/fakebin/: kubectl  pgbench  psql  sysbench
(+44 files in other folders)
