[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pgbench-harness"
version = "0.5.0"
description = "Repeatable PostgreSQL benchmarking harness (sysbench-based) with automated per-run HTML reports"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.5", "types-PyYAML"]

[project.scripts]
pgbench-harness = "pgbench_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pgbench_harness = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
