[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pgbench-harness"
version = "0.8.0"
description = "Repeatable PostgreSQL benchmarking harness (sysbench-based) with automated per-run HTML reports"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.5", "types-PyYAML", "httpx>=0.27"]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "bcrypt>=4.1",
    "cryptography>=42.0",
]

[project.scripts]
pgbench-harness = "pgbench_harness.cli:main"
pgbench-web = "pgbench_webapp.cli_entry:web_main"
pgbench-worker = "pgbench_webapp.cli_entry:worker_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pgbench_harness = ["templates/*.j2", "templates/*.js", "templates/*.css"]
pgbench_webapp = ["templates/*.html", "static/*", "static/spa/*", "static/spa/assets/*", "presets/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
